fixed navigation to look better on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,8 @@ body {
     z-index: 1;
     top: 0;
     left: 0;
-    height: 5.5%;
+    height: 30px;
+    padding: 0.5rem 1rem;
 }
 .main_nav ul {
     margin: 0.5%;
@@ -26,13 +27,12 @@ body {
 .main_nav li {
     display: inline-block;
     width: 25%;
-    font-size: 1.6vw;
+    font-size: 22px;
 }
 #song_ul {
-    margin-top: 5.5%;
+    padding-top: 40px;
 }
 #song_ul li {
-    /* display: inline-block; */
     width: 50%;
     font-size: 1.6vw;
 }
